fix header cells spacing

--- a/resources/css/qol.css
+++ b/resources/css/qol.css
@@ -128,3 +128,7 @@ details.qol-new-log {
     background-image: linear-gradient(135deg, #00000002 90%, var(--action-color));
     position: relative;
 }
+
+#allThemTables > tbody > tr > td {
+    width: calc(100% / 6);
+}
